--- a/app/src/app/feature/contract/page/contract-detail-page/contract-detail-page.component.html
+++ b/app/src/app/feature/contract/page/contract-detail-page/contract-detail-page.component.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="flex gap-6 items-center">
-      <div>
+      <div class="flex flex-col gap-4">
         <p-float-label>
           <p-input-number id="weeklySchedule" formControlName="weeklySchedule" mode="decimal" [showButtons]="true" inputId="weeklySchedule" [min]="" [max]="40" />
           <label for="weeklySchedule">{{ 'contract-create-feature-weeklySchedule' | translate }}</label>
