--- a/app/src/app/feature/staff/page/staff-create-page/staff-create-page.component.html
+++ b/app/src/app/feature/staff/page/staff-create-page/staff-create-page.component.html
@@ -16,7 +16,7 @@
             </p-floatlabel>
             @if(getErrorMessages('lastname').length > 0 && formGroup.get('lastname')?.touched) {
               @for(errorMessage of getErrorMessages('lastname') ; track $index) {
-                <p class="error-msg">{{ "staff-lastname" | translate }} {{ errorMessage }}</p>
+                <p class="error-msg">{{ errorMessage }}</p>
               }
             }
           </div>
@@ -27,7 +27,7 @@
             </p-floatlabel>
             @if(getErrorMessages('firstname').length > 0 && formGroup.get('firstname')?.touched) {
               @for(errorMessage of getErrorMessages('firstname') ; track $index) {
-                <p class="error-msg">{{ "staff-firstname" | translate }} {{ errorMessage }}</p>
+                <p class="error-msg">{{ errorMessage }}</p>
               }
             }
           </div>
@@ -48,7 +48,7 @@
               </p-floatlabel>
               @if(getErrorMessages('role').length > 0 && formGroup.get('role')?.touched) {
                 @for(errorMessage of getErrorMessages('role') ; track $index) {
-                  <p class="error-msg">{{ "staff-role" | translate }} {{ errorMessage }}</p>
+                  <p class="error-msg">{{ errorMessage }}</p>
                 }
               }
             </div>
@@ -65,7 +65,7 @@
               </p-floatlabel>
               @if(getErrorMessages('gender').length > 0 && formGroup.get('gender')?.touched) {
                 @for(errorMessage of getErrorMessages('gender') ; track $index) {
-                  <p class="error-msg">{{ "staff-gender" | translate }} {{ errorMessage }}</p>
+                  <p class="error-msg">{{ errorMessage }}</p>
                 }
               }
             </div>
@@ -77,7 +77,7 @@
             </p-floatlabel>
             @if(getErrorMessages('iban').length > 0 && formGroup.get('iban')?.touched) {
               @for(errorMessage of getErrorMessages('iban') ; track $index) {
-                <p class="error-msg">{{ "staff-iban" | translate }} {{ errorMessage }}</p>
+                <p class="error-msg">{{ errorMessage }}</p>
               }
             }
           </div>
@@ -88,7 +88,7 @@
             </p-float-label>
             @if(getErrorMessages('birthdate').length > 0 && formGroup.get('birthdate')?.touched) {
               @for(errorMessage of getErrorMessages('birthdate') ; track $index) {
-                <p class="error-msg">{{ "staff-birthdate" | translate }} {{ errorMessage }}</p>
+                <p class="error-msg">{{ errorMessage }}</p>
               }
             }
           </div>
@@ -99,12 +99,12 @@
 
           <div class="my-8">
             <p-floatlabel >
-              <input formControlName="mail" pInputText id="mail" class="w-full"/>
+              <input formControlName="mail" pInputText type="email" id="mail" class="w-full"/>
               <label for="mail">{{ "staff-mail" | translate }}</label>
             </p-floatlabel>
             @if(getErrorMessages('mail').length > 0 && formGroup.get('mail')?.touched) {
               @for(errorMessage of getErrorMessages('mail') ; track $index) {
-                <p class="error-msg">{{ "staff-mail" | translate }} {{ errorMessage }}</p>
+                <p class="error-msg">{{ errorMessage }}</p>
               }
             }
           </div>
@@ -115,7 +115,7 @@
             </p-floatlabel>
             @if(getErrorMessages('phone').length > 0 && formGroup.get('phone')?.touched) {
               @for(errorMessage of getErrorMessages('phone') ; track $index) {
-                <p class="error-msg">{{ "staff-phone" | translate }} {{ errorMessage }}</p>
+                <p class="error-msg">{{ errorMessage }}</p>
               }
             }
           </div>
@@ -134,7 +134,7 @@
               </p-floatlabel>
               @if(getErrorMessages('road').length > 0 && addressForm.get('road')?.touched) {
                 @for(errorMessage of getErrorMessages('road') ; track $index) {
-                  <p class="error-msg">{{ "address-road" | translate }} {{ errorMessage }}</p>
+                  <p class="error-msg">{{ errorMessage }}</p>
                 }
               }
             </div>
@@ -145,7 +145,7 @@
               </p-floatlabel>
               @if(getErrorMessages('nb').length > 0 && addressForm.get('nb')?.touched) {
                 @for(errorMessage of getErrorMessages('nb') ; track $index) {
-                  <p class="error-msg">{{ "address-nb" | translate }} {{ errorMessage }}</p>
+                  <p class="error-msg">{{ errorMessage }}</p>
                 }
               }
             </div>
@@ -158,7 +158,7 @@
               </p-floatlabel>
               @if(getErrorMessages('cp').length > 0 && addressForm.get('cp')?.touched) {
                 @for(errorMessage of getErrorMessages('cp') ; track $index) {
-                  <p class="error-msg">{{ "address-cp" | translate }} {{ errorMessage }}</p>
+                  <p class="error-msg">{{ errorMessage }}</p>
                 }
               }
             </div>
@@ -169,7 +169,7 @@
               </p-floatlabel>
               @if(getErrorMessages('town').length > 0 && addressForm.get('town')?.touched) {
                 @for(errorMessage of getErrorMessages('town') ; track $index) {
-                  <p class="error-msg">{{ "address-town" | translate }} {{ errorMessage }}</p>
+                  <p class="error-msg">{{ errorMessage }}</p>
                 }
               }
             </div>
@@ -181,7 +181,7 @@
             </p-floatlabel>
             @if(getErrorMessages('country').length > 0 && addressForm.get('country')?.touched) {
               @for(errorMessage of getErrorMessages('country') ; track $index) {
-                <p class="error-msg">{{ "address-country" | translate }} {{ errorMessage }}</p>
+                <p class="error-msg">{{ errorMessage }}</p>
               }
             }
           </div>
