--- a/app/src/app/feature/contract/page/contract-detail-page/contract-detail-page.component.html
+++ b/app/src/app/feature/contract/page/contract-detail-page/contract-detail-page.component.html
@@ -13,7 +13,7 @@
       </p-float-label>
       @if(getErrorMessages('salary').length > 0 && formGroup.get('salary')?.touched) {
         @for(errorMessage of getErrorMessages('salary') ; track $index) {
-          <p class="error-msg">{{ 'contract-create-feature-salary' | translate }} {{ errorMessage }}</p>
+          <p class="error-msg">{{ errorMessage }}</p>
         }
       }
     </div>
@@ -24,7 +24,7 @@
       </p-float-label>
       @if(getErrorMessages('perks').length > 0 && formGroup.get('perks')?.touched) {
         @for(errorMessage of getErrorMessages('perks') ; track $index) {
-          <p class="error-msg">{{ 'contract-create-feature-perks' | translate }} {{ errorMessage }}</p>
+          <p class="error-msg">{{ errorMessage }}</p>
         }
       }
     </div>
@@ -35,7 +35,7 @@
       </p-float-label>
       @if(getErrorMessages('startDate').length > 0 && formGroup.get('startDate')?.touched) {
         @for(errorMessage of getErrorMessages('startDate') ; track $index) {
-          <p class="error-msg">{{ 'contract-create-feature-startDate' | translate }} {{ errorMessage }}</p>
+          <p class="error-msg">{{ errorMessage }}</p>
         }
       }
     </div>
@@ -46,7 +46,7 @@
       </p-float-label>
       @if(getErrorMessages('endDate').length > 0 && formGroup.get('endDate')?.touched) {
         @for(errorMessage of getErrorMessages('endDate') ; track $index) {
-          <p class="error-msg">{{ 'contract-create-feature-endDate' | translate }} {{ errorMessage }}</p>
+          <p class="error-msg">{{ errorMessage }}</p>
         }
       }
     </div>
@@ -57,7 +57,7 @@
       </p-float-label>
       @if(getErrorMessages('contractType').length > 0 && formGroup.get('contractType')?.touched) {
         @for(errorMessage of getErrorMessages('contractType') ; track $index) {
-          <p class="error-msg">{{ 'contract-create-feature-contractType' | translate }} {{ errorMessage }}</p>
+          <p class="error-msg">{{ errorMessage }}</p>
         }
       }
     </div>
@@ -74,13 +74,16 @@
       </div>
       @if(getErrorMessages('weeklySchedule').length > 0 && formGroup.get('weeklySchedule')?.touched) {
         @for(errorMessage of getErrorMessages('weeklySchedule') ; track $index) {
-          <p class="error-msg">{{ 'contract-create-feature-weeklySchedule' | translate }} {{ errorMessage }}</p>
+          <p class="error-msg">{{ errorMessage }}</p>
         }
       }
     </div>
   </div>
   @if(this.editMode){
-    <p-button outlined raised type="submit" severity="success"><i class="pi pi-save"></i>{{ 'btn-save' | translate }}</p-button>
+    <div class="flex gap-4">
+      <p-button [disabled]="formGroup.invalid" outlined raised type="submit" severity="success"><i class="pi pi-save"></i>{{ 'btn-save' | translate }}</p-button>
+      <p-button outlined raised (click)="edit()" severity="danger"><i class="pi pi-times"></i><span>{{ 'btn-cancel' | translate }}</span></p-button>
+    </div>
   }
 </form>
 
